force-app/main/default/objects/Order/fields/Installation_Order__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Installation Order)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>