force-app/main/default/objects/Order/fields/Installment_Bank__c.field-meta.xml
<CustomField>
    <fullName>Installment_Bank__c</fullName>
    <label>Installment Bank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>