force-app/main/default/objects/Order/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interested In</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Interested In)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>