force-app/main/default/objects/Order/fields/Invoice_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Time__c</fullName>
    <formula>IF(  RecordType.DeveloperName = &apos;Bike&apos;  
   || RecordType.DeveloperName = &apos;PCA&apos;
   || RecordType.DeveloperName = &apos;External_Service&apos;
   || RecordType.DeveloperName = &apos;Free_Service_Order&apos;
   || RecordType.DeveloperName = &apos;Quick_Service_Order&apos;
  , DATETIMEVALUE( Invoice_Date__c )
  ,  IF(RecordType.DeveloperName = &apos;Free_Coupon&apos;  || RecordType.DeveloperName = &apos;Warranty&apos;
        , DATETIMEVALUE( Complete_Date__c ),NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Date/Time</label>
    <type>DateTime</type>
</CustomField>