force-app/main/default/objects/Order/fields/Is12mths__c.field-meta.xml
<CustomField>
    <fullName>Is12mths__c</fullName>
    <formula>IF( (TODAY() - Complete_Date__c ) &gt; 365 , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is12mths</label>
    <type>Checkbox</type>
</CustomField>