force-app/main/default/objects/Order/fields/Is6mths__c.field-meta.xml
<CustomField>
    <fullName>Is6mths__c</fullName>
    <formula
  >IF(  (TODAY() -  Complete_Date__c )&gt; 180 , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is6mths</label>
    <type>Checkbox</type>
</CustomField>