force-app/main/default/objects/Order/fields/Is_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval</label>
    <type>Checkbox</type>
</CustomField>