force-app/main/default/objects/Order/fields/Is_Bigbike__c.field-meta.xml
<CustomField>
    <fullName>Is_Bigbike__c</fullName>
    <formula
  >AND (NOT(ISNULL(Asset__c)),ISPICKVAL(Asset__r.Product2.Bike_cc__c, &apos;&gt;400cc&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Bigbike</label>
    <type>Checkbox</type>
</CustomField>