force-app/main/default/objects/Order/fields/Is_Booked_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booked Asset</label>
    <type>Checkbox</type>
</CustomField>