force-app/main/default/objects/Order/fields/Is_Created_Or_Sent_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_Or_Sent_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created Or Sent Invoice</label>
    <type>Checkbox</type>
</CustomField>