force-app/main/default/objects/Order/fields/Is_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount Approval</label>
    <type>Checkbox</type>
</CustomField>