force-app/main/default/objects/Order/fields/Is_First_PCA__c.field-meta.xml
<CustomField>
    <fullName>Is_First_PCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First PCA</label>
    <type>Checkbox</type>
</CustomField>