force-app/main/default/objects/Order/fields/Is_First_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Service</label>
    <type>Checkbox</type>
</CustomField>