force-app/main/default/objects/Order/fields/Is_Not_Have_Job_Or_Part__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Have_Job_Or_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Have Job Or Part</label>
    <type>Checkbox</type>
</CustomField>