force-app/main/default/objects/Order/fields/Is_Order_PCA_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_PCA_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order PCA of Service</label>
    <type>Checkbox</type>
</CustomField>