force-app/main/default/objects/Order/fields/Is_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deposit</label>
    <type>Checkbox</type>
</CustomField>