force-app/main/default/objects/Order/fields/Is_POS__c.field-meta.xml
<CustomField>
    <fullName>Is_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is POS</label>
    <type>Checkbox</type>
</CustomField>