force-app/main/default/objects/Order/fields/Is_Real__c.field-meta.xml
<CustomField>
    <fullName>Is_Real__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Real</label>
    <type>Checkbox</type>
</CustomField>