force-app/main/default/objects/Order/fields/Is_Survey_SMS__c.field-meta.xml
<CustomField>
    <fullName>Is_Survey_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Survey SMS</label>
    <type>Checkbox</type>
</CustomField>