force-app/main/default/objects/Order/fields/Is_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Is_Surveyed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Surveyed</label>
    <type>Checkbox</type>
</CustomField>