force-app/main/default/objects/Order/fields/Is_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync</label>
    <type>Checkbox</type>
</CustomField>