force-app/main/default/objects/Order/fields/Is_Tiki_Megapay__c.field-meta.xml
<CustomField>
    <fullName>Is_Tiki_Megapay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tiki / Megapay</label>
    <type>Checkbox</type>
</CustomField>