force-app/main/default/objects/Order/fields/IsForeigner__c.field-meta.xml
<CustomField>
    <fullName>IsForeigner__c</fullName>
    <formula>If(ISPICKVAL(Account.Language__c, &apos;English&apos;), True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Foreigner</label>
    <type>Checkbox</type>
</CustomField>