force-app/main/default/objects/Order/fields/KPI_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Date__c</fullName>
    <formula>IF(  ISNULL(Invoice_Date__c),  Complete_Date__c ,Invoice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Date</label>
    <type>Date</type>
</CustomField>