force-app/main/default/objects/Order/fields/Link_Survey_EN__c.field-meta.xml
<CustomField>
    <fullName>Link_Survey_EN__c</fullName>
    <label>Link Survey EN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>