force-app/main/default/objects/Order/fields/Link_Survey_VN__c.field-meta.xml
<CustomField>
    <fullName>Link_Survey_VN__c</fullName>
    <label>Link Survey VN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>