force-app/main/default/objects/Order/fields/Loan_Fee__c.field-meta.xml
<CustomField>
    <fullName>Loan_Fee__c</fullName>
    <label>Loan Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>