force-app/main/default/objects/Order/fields/Main_fairings__c.field-meta.xml
<CustomField>
    <fullName>Main_fairings__c</fullName>
    <label>Main fairings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>