force-app/main/default/objects/Order/fields/Make_And_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_And_Model__c</fullName>
    <label>Make And Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>