force-app/main/default/objects/Order/fields/Manual_Discount_Approve__c.field-meta.xml
<CustomField>
    <fullName>Manual_Discount_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Discount Approve</label>
    <type>Checkbox</type>
</CustomField>