force-app/main/default/objects/Order/fields/Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Mechanic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanic</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Mechanic</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Mechanic)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>