force-app/main/default/objects/Order/fields/MechanicComment__c.field-meta.xml
<CustomField>
    <fullName>MechanicComment__c</fullName>
    <label>MechanicComment</label>
    <type>TextArea</type>
</CustomField>