force-app/main/default/objects/Order/fields/Non_EmailResident__c.field-meta.xml
<CustomField>
    <fullName>Non_EmailResident__c</fullName>
    <formula>Order_Ecommerce__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Email Resident</label>
    <type>Text</type>
</CustomField>