force-app/main/default/objects/Order/fields/Non_NameResident__c.field-meta.xml
<CustomField>
    <fullName>Non_NameResident__c</fullName>
    <formula>Order_Ecommerce__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Name Resident</label>
    <type>Text</type>
</CustomField>