force-app/main/default/objects/Order/fields/Non_Resident__c.field-meta.xml
<CustomField>
    <fullName>Non_Resident__c</fullName>
    <formula>Account.NonResident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Resident</label>
    <type>Checkbox</type>
</CustomField>