force-app/main/default/objects/Order/fields/Note_Survey__c.field-meta.xml
<CustomField>
    <fullName>Note_Survey__c</fullName>
    <label>Note Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>