force-app/main/default/objects/Order/fields/NPS_Nagative__c.field-meta.xml
<CustomField>
    <fullName>NPS_Nagative__c</fullName>
    <label>NPS Nagative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>