force-app/main/default/objects/Order/fields/NPS_Positive__c.field-meta.xml
<CustomField>
    <fullName>NPS_Positive__c</fullName>
    <label>NPS Positive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>