force-app/main/default/objects/Order/fields/Order_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Complete_Date__c</fullName>
    <formula
  >IF(AND(ISPICKVAL(Status , &apos;Completed&apos;),OR(RecordType.DeveloperName == &quot;Quick_Service_Order&quot;,
RecordType.DeveloperName == &quot;Free_Service_Order&quot;,
RecordType.DeveloperName == &quot;External_Service&quot;,
RecordType.DeveloperName == &quot;Warranty&quot;,
RecordType.DeveloperName == &quot;Free_Coupon&quot;,
RecordType.DeveloperName == &quot;Recall_Service&quot;,
RecordType.DeveloperName == &quot;Service_Package&quot;)),TODAY(),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Complete Date</label>
    <type>Date</type>
</CustomField>