force-app/main/default/objects/Order/fields/Order_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Order_Ecommerce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Ecommerce</label>
    <referenceTo>Order_WebCommercal__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>