force-app/main/default/objects/Order/fields/Order_ID_CMS__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_CMS__c</fullName>
    <formula>Order_Ecommerce__r.Order_ID_CMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order ID CMS</label>
    <type>Text</type>
</CustomField>