force-app/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>