force-app/main/default/objects/Order/fields/Order_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Name__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner Name</label>
    <type>Text</type>
</CustomField>