force-app/main/default/objects/Order/fields/Order_PCA__c.field-meta.xml
<CustomField>
    <fullName>Order_PCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order PCA</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>