force-app/main/default/objects/Order/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
                <default>true</default>
                <label>CRM</label>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>