force-app/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Service</fullName>
            </value>
            <value>
                <fullName>Quick Service</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
                <label>Service Order</label>
            </value>
            <value>
                <fullName>Service Package</fullName>
            </value>
            <value>
                <fullName>Free Coupon</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>