force-app/main/default/objects/Order/fields/Paid_By_YMVN__c.field-meta.xml
<CustomField>
    <fullName>Paid_By_YMVN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid By YMVN</label>
    <type>Checkbox</type>
</CustomField>