force-app/main/default/objects/Order/fields/Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Part_ID__c</fullName>
    <formula>Product__r.PartID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part ID</label>
    <type>Text</type>
</CustomField>