force-app/main/default/objects/Order/fields/Passenger_seat__c.field-meta.xml
<CustomField>
    <fullName>Passenger_seat__c</fullName>
    <label>Passenger seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>