force-app/main/default/objects/Order/fields/Passing_Warning_Recall__c.field-meta.xml
<CustomField>
    <fullName>Passing_Warning_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passing Warning Recall</label>
    <type>Checkbox</type>
</CustomField>