force-app/main/default/objects/Order/fields/Payment_1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_Percent__c</fullName>
    <label>Payment 1 Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>