force-app/main/default/objects/Order/fields/Payment_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_Percent__c</fullName>
    <label>Payment 2 Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>