force-app/main/default/objects/Order/fields/Payment_Method_from_Web__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_from_Web__c</fullName>
    <formula>Order_Ecommerce__r.payment_method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method from Web</label>
    <type>Text</type>
</CustomField>