force-app/main/default/objects/Order/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thanh toán 1 lần</fullName>
            </value>
            <value>
                <fullName>Thanh toán 2 lần</fullName>
            </value>
            <value>
                <fullName>Thanh toán 3 lần</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>