force-app/main/default/objects/Order/fields/PCA_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>PCA_Delivery_Date__c</fullName>
    <label>PCA Delivery Date</label>
    <type>Date</type>
</CustomField>