force-app/main/default/objects/Order/fields/PhoneNonResident__c.field-meta.xml
<CustomField>
    <fullName>PhoneNonResident__c</fullName>
    <formula>Order_Ecommerce__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Non Resident</label>
    <type>Text</type>
</CustomField>