force-app/main/default/objects/Order/fields/PointCode__c.field-meta.xml
<CustomField>
    <fullName>PointCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PointCode</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (PointCode)</relationshipLabel>
    <relationshipName>Orders_PointCode</relationshipName>
    <type>Lookup</type>
</CustomField>