force-app/main/default/objects/Order/fields/Pre_booking__c.field-meta.xml
<CustomField>
    <fullName>Pre_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-booking</label>
    <type>Checkbox</type>
</CustomField>