force-app/main/default/objects/Order/fields/Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Prepaid__c</fullName>
    <description>% trả trước - Accounting Report</description>
    <label>% Prepaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>