force-app/main/default/objects/Order/fields/Profomar_Completed__c.field-meta.xml
<CustomField>
    <fullName>Profomar_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profomar Completed</label>
    <type>Checkbox</type>
</CustomField>