force-app/main/default/objects/Order/fields/Progress_Flow_Details__c.field-meta.xml
<CustomField>
    <fullName>Progress_Flow_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Flow Details</label>
    <referenceTo>Progress_Flow_Details__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>