force-app/main/default/objects/Order/fields/Promotion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Amount__c</fullName>
    <description>CTKM giảm/ 
E-voucher/
….
Hình thức thanh toán - Báo cáo Acc</description>
    <label>Promotion Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>