force-app/main/default/objects/Order/fields/Promotion_Default__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Default__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Default</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>