force-app/main/default/objects/Order/fields/Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Name__c</fullName>
    <formula>Opportunity.SyncedQuote.Promotion_Item__r.Promotion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Name</label>
    <type>Text</type>
</CustomField>