force-app/main/default/objects/Order/fields/PSI__c.field-meta.xml
<CustomField>
    <fullName>PSI__c</fullName>
    <label>PSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>