force-app/main/default/objects/Order/fields/PSI_Positive__c.field-meta.xml
<CustomField>
    <fullName>PSI_Positive__c</fullName>
    <label>PSI Positive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>