force-app/main/default/objects/Order/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fullpaid</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>