force-app/main/default/objects/Order/fields/Rear_brake__c.field-meta.xml
<CustomField>
    <fullName>Rear_brake__c</fullName>
    <label>Rear brake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>