force-app/main/default/objects/Order/fields/Rear_shock_s__c.field-meta.xml
<CustomField>
    <fullName>Rear_shock_s__c</fullName>
    <label>Rear shock(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>