force-app/main/default/objects/Order/fields/Rearsets_Footpegs__c.field-meta.xml
<CustomField>
    <fullName>Rearsets_Footpegs__c</fullName>
    <label>Rearsets/Footpegs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>