force-app/main/default/objects/Order/fields/Receive_Address__c.field-meta.xml
<CustomField>
    <fullName>Receive_Address__c</fullName>
    <formula>Order_Ecommerce__r.Receive_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receive Address</label>
    <type>Text</type>
</CustomField>