force-app/main/default/objects/Order/fields/Received_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Received_Mobile__c</fullName>
    <label>Received Mobile</label>
    <type>Phone</type>
</CustomField>