force-app/main/default/objects/Order/fields/Received_Name__c.field-meta.xml
<CustomField>
    <fullName>Received_Name__c</fullName>
    <label>Received Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>