force-app/main/default/objects/Order/fields/Recondition__c.field-meta.xml
<CustomField>
    <fullName>Recondition__c</fullName>
    <label>Recondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>