force-app/main/default/objects/Order/fields/Reconditioning_note__c.field-meta.xml
<CustomField>
    <fullName>Reconditioning_note__c</fullName>
    <label>Reconditioning note</label>
    <type>TextArea</type>
</CustomField>