force-app/main/default/objects/Order/fields/Reconditioning_Total__c.field-meta.xml
<CustomField>
    <fullName>Reconditioning_Total__c</fullName>
    <label>Reconditioning Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>