force-app/main/default/objects/Order/fields/Relatives_Name__c.field-meta.xml
<CustomField>
    <fullName>Relatives_Name__c</fullName>
    <label>Relatives Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>