force-app/main/default/objects/Order/fields/Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value__c</fullName>
    <label>Remaining Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>